# advent-of-code-2024

./: .gitignore  CMakeLists.txt  README.md
day1/part1/: CMakeLists.txt  part1.cpp
day1/part2/: CMakeLists.txt  part2.cpp
day2/part1/: CMakeLists.txt  part1.cpp
day2/part2/: CMakeLists.txt  part2.cpp
day3/part1/: CMakeLists.txt  part1.cpp
day3/part2/: CMakeLists.txt  part2.cpp
day4/: CMakeLists.txt
day4/part1/: CMakeLists.txt  part1.cpp
day4/part2/: CMakeLists.txt  part2.cpp
day5/: CMakeLists.txt
day5/part1/: CMakeLists.txt  part1.cpp
utils/: CMakeLists.txt
utils/include/: FileReader.h  InputConversions.h  ProgramOptions.h  Types.h
utils/src/: FileReader.cpp  InputConversions.cpp  ProgramOptions.cpp
